CAUSEWAY-3816: TableColumnOrderServiceUsingTxtFile should ignore whitespaces from columnOrder.txt files